  2.7.8+), to improve performance over bundled pure Python
  version. Note that acceleration via m2crypto is no longer supported
  (Christof Meerwald)
- issue2550989: PGP encryption is now done using the gpg module
  instead of pyme. (Christof Meerwald)
- issue2550987: Use updated MySQL client module that supports Python
  3. (Christof Meerwald)

Fixed:

- issue2550811: work around Unicode encoding issues in jinja2 template
  by explicitly converting data to Unicode; also fixed pagination and
  selecting columns to display in the issues list (Christof Meerwald)
- issue2550988: fixed fallback to pseudo random number generator in
  case SystemRandom isn't available, prefer use of secrets module if
  available (Python 3.6+) (Christof Meerwald)
- issue2550993: fixed edit CSV action to update restored items to the
  new value instead of restoring with the previous value (Christof
  Meerwald)


2018-07-13 1.6.0

Features:

- issue2550894: migrate test suite and run_test.py to py.test (John Kristensen)
- issue2550880: Ability to choose password store scheme and SSHA
  support. Discussion on devel list is tending in favor of this patch.
  Embedded test works, my manual test with a SSHA password
  assigned to a user allowed the user to log in.   Ran the test suite
  and the tests that were not skipped passed. (applied by John Rouillard)
- New Link/Multilink property attribute 'msg_header_property', can be
  used to configure additional headers in outgoing emails. See
  documentation in ``doc/customizing.txt``. (Ralf Schlatterbeck)
- Allow multiple file uploads: If the html template specifies
  multiple="multiple" for a file upload the user can attach multiple
  files and the form parser now handles this. (Ralf Schlatterbeck)
- issue2550886: Add support for an integer type to join the existing
  number type. This can be used for properties used for ordering,
  counts etc. where a decimal point isn't needed. Developed by